[project]
name = "riskcalculator"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "schwab-py (>=1.5.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
